gl51-master/src/test/deca/context/invalid/test_rule3_39.deca
//Description
//On ne peut pas cast une expression de type void

{
    //?
}